shell_client.cpp
@@ -1982,6 +1982,9 @@ bool ShellClient::isPopupWindow() const
     if (Toplevel::isPopupWindow()) {
         return true;
     }
+    if (isInternal() && m_internalWindow) {
+        return m_internalWindow->flags().testFlag(Qt::Popup);
+    }
     if (m_shellSurface != nullptr) {
         return m_shellSurface->isPopup();
     }
